...
    struct Category: Identifiable {
        var id: String
        var name: String
    }

    var categories = [
        Category(id: "apparel", name: "Apparel and Accessories"),
        Category(id: "home", name: "Home and Garden"),
        Category(id: "electronics", name: "Electronics"),
        Category(id: "hobbies", name: "Hobbies and Leisure")
    ]

    var body: some View {
...
